--- a/index.html
+++ b/index.html
@@ -21,66 +21,66 @@
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
 
-  <div class="mobile-menu display-none">
-    <div class="mobile-menu__content">
-      <button type="button" class="mobile-menu__button-close">
-        <svg height="18.67" width="18.67">
-          <use href="./images/icons.svg#icon-close_mobile"></use>
-        </svg>
-      </button>
-      <ul class="mobile-menu__links">
-        <li>
-          <a
-            class="mobile-menu__links-agency mobile-menu-agency--active"
-            href="index.html"
-            >Agencja</a
-          >
-        </li>
-        <li>
-          <a class="mobile-menu__links-portfolio" href="./portfolio.html"
-            >Portfolio</a
-          >
-        </li>
-        <li>
-          <a class="mobile-menu__links-contact" href="Kontakt">Kontakt</a>
-        </li>
-      </ul>
-
-      <ul class="mobile-menu__contact">
-        <li>
-          <a
-            class="mobile-menu__contact-element-phone mobile-menu__contact-element--transformation"
-            href="phone:+48111111111"
-            >+48 111 111 111</a
-          >
-        </li>
-
-        <li>
-          <a
-            class="mobile-menu__contact-element-mail mobile-menu__contact-element--transformation"
-            href="mailto:info@devstudio.com"
-            >info@devstudio.com</a
-          >
-        </li>
-      </ul>
-      <ul class="mobile-menu__social">
-        <li>
-          <a class="mobile-menu__social-item" href="">Instagram</a>
-        </li>
-        <li>
-          <a class="mobile-menu__social-item" href="">Twitter</a>
-        </li>
-        <li>
-          <a class="mobile-menu__social-item" href="">Facebook</a>
-        </li>
-        <li>
-          <a class="mobile-menu__social-item--Linkedin" href="">Linkedin</a>
-        </li>
-      </ul>
-    </div>
-  </div>
-
   <body>
+    <div class="mobile-menu display-none">
+      <div class="mobile-menu__content">
+        <button type="button" class="mobile-menu__button-close">
+          <svg height="18.67" width="18.67">
+            <use href="./images/icons.svg#icon-close_mobile"></use>
+          </svg>
+        </button>
+        <ul class="mobile-menu__links">
+          <li>
+            <a
+              class="mobile-menu__links-agency mobile-menu-agency--active"
+              href="index.html"
+              >Agencja</a
+            >
+          </li>
+          <li>
+            <a class="mobile-menu__links-portfolio" href="./portfolio.html"
+              >Portfolio</a
+            >
+          </li>
+          <li>
+            <a class="mobile-menu__links-contact" href="Kontakt">Kontakt</a>
+          </li>
+        </ul>
+
+        <ul class="mobile-menu__contact">
+          <li>
+            <a
+              class="mobile-menu__contact-element-phone mobile-menu__contact-element--transformation"
+              href="phone:+48111111111"
+              >+48 111 111 111</a
+            >
+          </li>
+
+          <li>
+            <a
+              class="mobile-menu__contact-element-mail mobile-menu__contact-element--transformation"
+              href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+        </ul>
+        <ul class="mobile-menu__social">
+          <li>
+            <a class="mobile-menu__social-item" href="">Instagram</a>
+          </li>
+          <li>
+            <a class="mobile-menu__social-item" href="">Twitter</a>
+          </li>
+          <li>
+            <a class="mobile-menu__social-item" href="">Facebook</a>
+          </li>
+          <li>
+            <a class="mobile-menu__social-item--Linkedin" href="">Linkedin</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+
     <header class="header">
       <div class="container">
         <div class="header__content">
@@ -340,8 +340,11 @@
                   <p>APLIKACJE KOMPUTEROWE</p>
                 </div>
                 <img
-                  src="./images/1_1x desktop.jpg"
-                  srcset="1_1x desktop.jpg 1x, 1_2x desktop.jpg 2x"
+                  src="./images/Activities/activities_desktop_pic1_1x.jpg"
+                  srcset="
+                    ./images/Activities/activities_desktop_pic1_1x.jpg 1x,
+                    ./images/Activities/activities_desktop_pic1_2x.jpg 2x
+                  "
                   width="370"
                   height="294"
                   alt="man hands typing on keyboard"
@@ -353,8 +356,11 @@
                   <p>APLIKACJE MOBILNE</p>
                 </div>
                 <img
-                  src="./images/2_1x desktop.jpg"
-                  srcset="2_1x desktop.jpg 1x, 2_2x desktop.jpg 2x"
+                  src="./images/Activities/activities_desktop_pic2_1x.jpg"
+                  srcset="
+                    ./images/Activities/activities_desktop_pic2_1x.jpg 1x,
+                    ./images/Activities/activities_desktop_pic2_2x.jpg 2x
+                  "
                   width="370"
                   height="294"
                   alt="woman hand holding mobile over laptop keyboard"
@@ -366,8 +372,11 @@
                   <p>ROZWIĄZANIA GRAFICZNE</p>
                 </div>
                 <img
-                  src="./images/3_1x desktop.jpg"
-                  srcset="3_1x desktop.jpg 1x, 3_2x desktop.jpg 2x"
+                  src="./images/Activities/activities_desktop_pic3_1x.jpg"
+                  srcset="
+                    ./images/Activities/activities_desktop_pic3_1x.jpg 1x,
+                    ./images/Activities/activities_desktop_pic3_2x.jpg 2x
+                  "
                   width="370"
                   height="294"
                   alt="woman hands holding tablet over desk"
@@ -386,14 +395,14 @@
               <li class="team_pic">
                 <picture>
                   <img
-                    src="./images/4_1x desktop.jpg"
+                    src="./images/Team/team_desktop_pic1_1x.jpg"
                     srcset="
-                  ./images/4_1x mobile.jpg 450w,
-                  ./images/4_2x mobile.jpg 900w,
-                  ./images/4_1x mobile.jpg 354w,
-                  ./images/4_2x mobile.jpg 708w;
-                  ./images/4_1x desktop.jpg 270w,
-                  ./images/4_1x desktop.jpg 540w;
+                    team_mobile_pic1_1x.jpg 450w;
+                    team_mobile_pic1_2x.jpg 900w,
+                    team_tablet_pic1_1x.jpg 354w,
+                    team_tablet_pic1_2x.jpg 708w;
+                    team_desktop_pic1_1x.jpg 270w,
+                    team_desktop_pic1_2x.jpg 540w;
                   "
                     sizes="(min-width: 480px) 450px, (min-width: 768px) 354px, (min-width: 1200px) 270px, 100vw"
                     min-width="270"
