--- a/index.html
+++ b/index.html
@@ -397,15 +397,14 @@
                   <img
                     src="./images/Team/team_desktop_pic1_1x.jpg"
                     srcset="
-                    team_mobile_pic1_1x.jpg 450w;
-                    team_mobile_pic1_2x.jpg 900w,
-                    team_tablet_pic1_1x.jpg 354w,
-                    team_tablet_pic1_2x.jpg 708w;
-                    team_desktop_pic1_1x.jpg 270w,
-                    team_desktop_pic1_2x.jpg 540w;
+                    ./images/Team/team_mobile_pic1_1x.jpg 450w;
+                    ./images/Team/team_mobile_pic1_2x.jpg 900w,
+                    ./images/Team/team_tablet_pic1_1x.jpg 354w,
+                    ./images/Team/team_tablet_pic1_2x.jpg 708w;
+                    ./images/Team/team_desktop_pic1_1x.jpg 270w,
+                    ./images/Team/team_desktop_pic1_2x.jpg 540w;
                   "
                     sizes="(min-width: 480px) 450px, (min-width: 768px) 354px, (min-width: 1200px) 270px, 100vw"
-                    min-width="270"
                     alt="young bearded man with glasses in brown shirt smiling"
                   />
                 </picture>
@@ -436,17 +435,16 @@
               </li>
               <li>
                 <img
-                  src="./images/5_1x desktop.jpg"
+                  src="./images/Team/team_desktop_pic2_1x.jpg"
                   srcset="
-                5_1x mobile.jpg 450w,
-                5_2x mobile.jpg 900w,
-                5_1x mobile.jpg 354w,
-                5_2x mobile.jpg 708w;
-                5_1x desktop.jpg 270w,
-                5_1x desktop.jpg 540w;
-                "
+                ./images/Team/team_mobile_pic2_1x.jpg 450w;
+                ./images/Team/team_mobile_pic2_2x.jpg 900w,
+                ./images/Team/team_tablet_pic2_1x.jpg 354w,
+                ./images/Team/team_tablet_pic2_2x.jpg 708w;
+                ./images/Team/team_desktop_pic2_1x.jpg 270w,
+                ./images/Team/team_desktop_pic2_2x.jpg 540w;
+              "
                   sizes="(min-width: 480px) 450px, (min-width: 768px) 354px, (min-width: 1200px) 270px, 100vw"
-                  min-width="270"
                   alt="young blond hair woman with glasses smiling"
                 />
                 <p class="team__name">John Doe</p>
@@ -476,15 +474,15 @@
               </li>
               <li>
                 <img
-                  src="./images/6_1x desktop.jpg"
+                  src="./images/Team/team_desktop_pic3_1x.jpg"
                   srcset="
-                6_1x mobile.jpg 450w,
-                6_2x mobile.jpg 900w,
-                6_1x mobile.jpg 354w,
-                6_2x mobile.jpg 708w;
-                6_1x desktop.jpg 270w,
-                6_1x desktop.jpg 540w;
-                "
+                ./images/Team/team_mobile_pic3_1x.jpg 450w;
+                ./images/Team/team_mobile_pic3_2x.jpg 900w,
+                ./images/Team/team_tablet_pic3_1x.jpg 354w,
+                ./images/Team/team_tablet_pic3_2x.jpg 708w;
+                ./images/Team/team_desktop_pic3_1x.jpg 270w,
+                ./images/Team/team_desktop_pic3_2x.jpg 540w;
+              "
                   sizes="(min-width: 480px) 450px, (min-width: 768px) 354px, (min-width: 1200px) 270px, 100vw"
                   min-width="270"
                   alt="young man in blue shirt smiling"
@@ -516,15 +514,15 @@
               </li>
               <li>
                 <img
-                  src="./images/7_1x desktop.jpg"
+                  src="./images/Team/team_desktop_pic4_1x.jpg"
                   srcset="
-                7_1x mobile.jpg 450w,
-                7_2x mobile.jpg 900w,
-                7_1x mobile.jpg 354w,
-                7_2x mobile.jpg 708w;
-                7_1x desktop.jpg 270w,
-                7_1x desktop.jpg 540w;
-                "
+                ./images/Team/team_mobile_pic4_1x.jpg 450w;
+                ./images/Team/team_mobile_pic4_2x.jpg 900w,
+                ./images/Team/team_tablet_pic4_1x.jpg 354w,
+                ./images/Team/team_tablet_pic4_2x.jpg 708w;
+                ./images/Team/team_desktop_pic4_1x.jpg 270w,
+                ./images/Team/team_desktop_pic4_2x.jpg 540w;
+              "
                   sizes="(min-width: 480px) 450px, (min-width: 768px) 354px, (min-width: 1200px) 270px, 100vw"
                   min-width="270"
                   alt="young bearded man with glasses in black t-shirt"
