--- a/index.html
+++ b/index.html
@@ -394,17 +394,31 @@
             <ul class="team__list">
               <li class="team_pic">
                 <picture>
-                  <img
-                    src="./images/Team/team_desktop_pic1_1x.jpg"
+                  <source
+                    media="(min-width:1200px)"
                     srcset="
-                    ./images/Team/team_mobile_pic1_1x.jpg 450w;
-                    ./images/Team/team_mobile_pic1_2x.jpg 900w,
-                    ./images/Team/team_tablet_pic1_1x.jpg 354w,
-                    ./images/Team/team_tablet_pic1_2x.jpg 708w;
-                    ./images/Team/team_desktop_pic1_1x.jpg 270w,
-                    ./images/Team/team_desktop_pic1_2x.jpg 540w;
-                  "
-                    sizes="(min-width: 480px) 450px, (min-width: 768px) 354px, (min-width: 1200px) 270px, 100vw"
+                      ./images/Team/tpic1d1x.jpg 1x,
+                      ./images/Team/tpic1d2x.jpg 2x
+                    "
+                  />
+
+                  <source
+                    media="(min-width:768px)"
+                    srcset="
+                      ./images/Team/tpic1t1x.jpg 1x,
+                      ./images/Team/tpic1t2x.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width:480px)"
+                    srcset="
+                      ./images/Team/tpic1m1x.jpg  1x,
+                      ./images/Team/tpic1m2x.jpgx 2x
+                    "
+                  />
+
+                  <img
+                    src="./images/Team/tpic1d1x.jpg"
                     alt="young bearded man with glasses in brown shirt smiling"
                   />
                 </picture>
@@ -434,19 +448,35 @@
                 </div>
               </li>
               <li>
-                <img
-                  src="./images/Team/team_desktop_pic2_1x.jpg"
-                  srcset="
-                ./images/Team/team_mobile_pic2_1x.jpg 450w;
-                ./images/Team/team_mobile_pic2_2x.jpg 900w,
-                ./images/Team/team_tablet_pic2_1x.jpg 354w,
-                ./images/Team/team_tablet_pic2_2x.jpg 708w;
-                ./images/Team/team_desktop_pic2_1x.jpg 270w,
-                ./images/Team/team_desktop_pic2_2x.jpg 540w;
-              "
-                  sizes="(min-width: 480px) 450px, (min-width: 768px) 354px, (min-width: 1200px) 270px, 100vw"
-                  alt="young blond hair woman with glasses smiling"
-                />
+                <picture>
+                  <source
+                    media="(min-width:1200px)"
+                    srcset="
+                      ./images/Team/tpic2d1x.jpg 1x,
+                      ./images/Team/tpic2d2x.jpg 2x
+                    "
+                  />
+
+                  <source
+                    media="(min-width:768px)"
+                    srcset="
+                      ./images/Team/tpic2t1x.jpg 1x,
+                      ./images/Team/tpic2t2x.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width:480px)"
+                    srcset="
+                      ./images/Team/tpic2m1x.jpg  1x,
+                      ./images/Team/tpic2m2x.jpgx 2x
+                    "
+                  />
+
+                  <img
+                    src="./images/Team/tpic2d1x.jpg"
+                    alt="young blond hair woman with glasses smiling"
+                  />
+                </picture>
                 <p class="team__name">John Doe</p>
                 <p class="team__job">Frontend Developer</p>
                 <div class="team__icon">
@@ -473,20 +503,35 @@
                 </div>
               </li>
               <li>
-                <img
-                  src="./images/Team/team_desktop_pic3_1x.jpg"
-                  srcset="
-                ./images/Team/team_mobile_pic3_1x.jpg 450w;
-                ./images/Team/team_mobile_pic3_2x.jpg 900w,
-                ./images/Team/team_tablet_pic3_1x.jpg 354w,
-                ./images/Team/team_tablet_pic3_2x.jpg 708w;
-                ./images/Team/team_desktop_pic3_1x.jpg 270w,
-                ./images/Team/team_desktop_pic3_2x.jpg 540w;
-              "
-                  sizes="(min-width: 480px) 450px, (min-width: 768px) 354px, (min-width: 1200px) 270px, 100vw"
-                  min-width="270"
-                  alt="young man in blue shirt smiling"
-                />
+                <picture>
+                  <source
+                    media="(min-width:1200px)"
+                    srcset="
+                      ./images/Team/tpic3d1x.jpg 1x,
+                      ./images/Team/tpic3d2x.jpg 2x
+                    "
+                  />
+
+                  <source
+                    media="(min-width:768px)"
+                    srcset="
+                      ./images/Team/tpic3t1x.jpg 1x,
+                      ./images/Team/tpic3t2x.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width:480px)"
+                    srcset="
+                      ./images/Team/tpic3m1x.jpg  1x,
+                      ./images/Team/tpic3m2x.jpgx 2x
+                    "
+                  />
+
+                  <img
+                    src="./images/Team/tpic3d1x.jpg"
+                    alt="young man in blue shirt smiling"
+                  />
+                </picture>
                 <p class="team__name">John Doe</p>
                 <p class="team__job">Marketing</p>
                 <div class="team__icon">
@@ -513,20 +558,35 @@
                 </div>
               </li>
               <li>
-                <img
-                  src="./images/Team/team_desktop_pic4_1x.jpg"
-                  srcset="
-                ./images/Team/team_mobile_pic4_1x.jpg 450w;
-                ./images/Team/team_mobile_pic4_2x.jpg 900w,
-                ./images/Team/team_tablet_pic4_1x.jpg 354w,
-                ./images/Team/team_tablet_pic4_2x.jpg 708w;
-                ./images/Team/team_desktop_pic4_1x.jpg 270w,
-                ./images/Team/team_desktop_pic4_2x.jpg 540w;
-              "
-                  sizes="(min-width: 480px) 450px, (min-width: 768px) 354px, (min-width: 1200px) 270px, 100vw"
-                  min-width="270"
-                  alt="young bearded man with glasses in black t-shirt"
-                />
+                <picture>
+                  <source
+                    media="(min-width:1200px)"
+                    srcset="
+                      ./images/Team/tpic4d1x.jpg 1x,
+                      ./images/Team/tpic4d2x.jpg 2x
+                    "
+                  />
+
+                  <source
+                    media="(min-width:768px)"
+                    srcset="
+                      ./images/Team/tpic4t1x.jpg 1x,
+                      ./images/Team/tpic4t2x.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width:480px)"
+                    srcset="
+                      ./images/Team/tpic4m1x.jpg  1x,
+                      ./images/Team/tpic4m2x.jpgx 2x
+                    "
+                  />
+
+                  <img
+                    src="./images/Team/tpic4d1x.jpg"
+                    alt="young bearded man with glasses in black t-shirt"
+                  />
+                </picture>
                 <p class="team__name">John Doe</p>
                 <p class="team__job">UI Designer</p>
                 <div class="team__icon">
