--- a/index.html
+++ b/index.html
@@ -673,11 +673,13 @@
     <footer class="footer">
       <div class="container">
         <div class="footer__wrapper">
+          <div class="footer__wrapper-tablet">
+          <div class="footer__wrapper-logo-contact">
+          <a class="footer__contact-logo" href="index.html">
+            <span class="footer__logo-web">Web</span>
+            <span class="footer__logo-studio">Studio</span>
+          </a>
           <div class="footer__contact">
-            <a class="footer__contact-logo" href="index.html">
-              <span class="footer__logo-web">Web</span>
-              <span class="footer__logo-studio">Studio</span>
-            </a>
 
             <ul class="footer__contact-list">
               <li>
@@ -697,6 +699,7 @@
                 >
               </li>
             </ul>
+          </div>
           </div>
           <div class="footer__social">
             <div class="footer__social-header">
@@ -739,6 +742,8 @@
               </ul>
             </div>
           </div>
+          </div>
+          <div class="footer__newsletter-wrapper">
           <form class="footer__newsletter">
             <div class="footer__newsletter-header">
               <h3>Zapisz się do newslettera</h3>
@@ -760,6 +765,7 @@
               </button>
             </div>
           </form>
+          </div>
         </div>
       </div>
     </footer>
