--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
         </div>
       </section>
 
-      <section class="values section">
+      <section class="values">
         <div class="container">
           <div>
             <h2 class="values__header">Lorem</h2>
@@ -674,98 +674,97 @@
       <div class="container">
         <div class="footer__wrapper">
           <div class="footer__wrapper-tablet">
-          <div class="footer__wrapper-logo-contact">
-          <a class="footer__contact-logo" href="index.html">
-            <span class="footer__logo-web">Web</span>
-            <span class="footer__logo-studio">Studio</span>
-          </a>
-          <div class="footer__contact">
+            <div class="footer__wrapper-logo-contact">
+              <a class="footer__contact-logo" href="index.html">
+                <span class="footer__logo-web">Web</span>
+                <span class="footer__logo-studio">Studio</span>
+              </a>
+              <div class="footer__contact">
+                <ul class="footer__contact-list">
+                  <li>
+                    <span class="footer__contact-street"
+                      >m. Warszawa, Aleje Jerozolimskie 21</span
+                    >
+                  </li>
 
-            <ul class="footer__contact-list">
-              <li>
-                <span class="footer__contact-street"
-                  >m. Warszawa, Aleje Jerozolimskie 21</span
-                >
-              </li>
-
-              <li>
-                <a class="footer__contact-mail" href="mailto:info@example.com"
-                  >info@example.com</a
-                >
-              </li>
-              <li>
-                <a class="footer__contact-phone" href="tel:+48111111111"
-                  >+48 111 111 111</a
-                >
-              </li>
-            </ul>
-          </div>
-          </div>
-          <div class="footer__social">
-            <div class="footer__social-header">
-              <h3>Dołącz do nas</h3>
+                  <li>
+                    <a
+                      class="footer__contact-mail"
+                      href="mailto:info@example.com"
+                      >info@example.com</a
+                    >
+                  </li>
+                  <li>
+                    <a class="footer__contact-phone" href="tel:+48111111111"
+                      >+48 111 111 111</a
+                    >
+                  </li>
+                </ul>
+              </div>
             </div>
+            <div class="footer__social">
+              <div class="footer__social-header">
+                <h3>Dołącz do nas</h3>
+              </div>
 
-            <div class="footer__social-icons">
-              <ul class="footer__social-list">
-                <li>
-                  <div class="footer__instagram">
-                    <svg width="20" height="20">
-                      <use href="./images/icons.svg#icon-instagram"></use>
-                    </svg>
-                  </div>
-                </li>
+              <div class="footer__social-icons">
+                <ul class="footer__social-list">
+                  <li>
+                    <div class="footer__instagram">
+                      <svg width="20" height="20">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </div>
+                  </li>
 
-                <li>
-                  <div class="footer__twitter">
-                    <svg width="20" height="20">
-                      <use href="./images/icons.svg#icon-twitter"></use>
-                    </svg>
-                  </div>
-                </li>
+                  <li>
+                    <div class="footer__twitter">
+                      <svg width="20" height="20">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </div>
+                  </li>
 
-                <li>
-                  <div class="footer__facebook">
-                    <svg width="20" height="20">
-                      <use href="./images/icons.svg#icon-facebook"></use>
-                    </svg>
-                  </div>
-                </li>
+                  <li>
+                    <div class="footer__facebook">
+                      <svg width="20" height="20">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </div>
+                  </li>
 
-                <li>
-                  <div class="footer__linkedin">
-                    <svg width="20" height="20">
-                      <use href="./images/icons.svg#icon-linkedin"></use>
-                    </svg>
-                  </div>
-                </li>
-              </ul>
+                  <li>
+                    <div class="footer__linkedin">
+                      <svg width="20" height="20">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </div>
+                  </li>
+                </ul>
+              </div>
             </div>
-          </div>
           </div>
           <div class="footer__newsletter-wrapper">
             <div class="footer__newsletter-header">
               <h3>Zapisz się do newslettera</h3>
             </div>
-          <form class="footer__newsletter">
-            <div class="footer__newsletter-box">
-              <input
-                class="footer__newsletter-input"
-                type="text"
-                placeholder="E-mail"
-                id="sign-in-mail"
-                name="newsletter"
-              />
-
-              
-            </div>
-            <button type="submit" class="footer__button">
-              Zapisz się
-              <svg width="24" height="24">
-                <use href="./images/icons.svg#icon-send"></use>
-              </svg>
-            </button>
-          </form>
+            <form class="footer__newsletter">
+              <div class="footer__newsletter-box">
+                <input
+                  class="footer__newsletter-input"
+                  type="text"
+                  placeholder="E-mail"
+                  id="sign-in-mail"
+                  name="newsletter"
+                />
+              </div>
+              <button type="submit" class="footer__button">
+                Zapisz się
+                <svg width="24" height="24">
+                  <use href="./images/icons.svg#icon-send"></use>
+                </svg>
+              </button>
+            </form>
           </div>
         </div>
       </div>
